
### Revised UML Diagram (PlantUML)

Here’s an updated PlantUML diagram reflecting the separation of `User` and `UserActivity`:

```plantuml
@startuml

package "Domain" {
    class User {
        +String userId
        +String username
        +String email
        +String getUserId()
        +String getUsername()
        +String getEmail()
    }

    class UserRepository {
        +List<User> findAll()
        +User findById(String userId)
    }
}

package "Application" {
    class UserService {
        +List<User> filterUsersWithMoreActivities(int minActivities)
        +List<User> sortByAttribute(String attribute)
    }
}

package "Infrastructure" {
    class UserRepositoryImpl {
        +List<User> findAll()
        +User findById(String userId)
    }
}

package "UI" {
    class AnalyticsController {
        +void showAnalytics()
    }
}

package "App" {
    class SocialMediaAnalyzerApp {
        +static void main(String[] args)
    }
}


UserRepository <|.. UserRepositoryImpl : implements
UserService ..> UserRepository : uses
UserService ..> User : processes
AnalyticsController ..> UserService : interacts
SocialMediaAnalyzerApp ..> AnalyticsController : runs
@enduml
